tests/fail/elaboration/ambiguous-array-literal.snap
stdout = ''
stderr = '''
error: ambiguous array literal
  ┌─ tests/fail/elaboration/ambiguous-array-literal.fathom:3:1
  │
3 │ []
  │ ^^ type annotations needed

'''
